[gd_scene load_steps=4 format=3 uid="uid://bfahu2xv271kl"]

[ext_resource type="Script" uid="uid://cgrgg3bwxg6r3" path="res://scripts/ui/farm_hud.gd" id="1_yvr8p"]
[ext_resource type="Texture2D" uid="uid://dgmwpjc8lapku" path="res://assets/UI and Menus/mainMenu.png" id="3_n3k4p"]
[ext_resource type="Texture2D" uid="uid://rlopj1qxwnjj" path="res://assets/combat/sun_icon.png" id="4_0rdsr"]

[node name="FarmHUD" type="CanvasLayer"]
script = ExtResource("1_yvr8p")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SeedsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SeedIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/SeedsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_n3k4p")
expand_mode = 1
stretch_mode = 5

[node name="SeedsLabel" type="Label" parent="MarginContainer/HBoxContainer/SeedsContainer"]
layout_mode = 2
text = "3"
vertical_alignment = 1

[node name="PointsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PointsIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/PointsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_n3k4p")
expand_mode = 1
stretch_mode = 5

[node name="PointsLabel" type="Label" parent="MarginContainer/HBoxContainer/PointsContainer"]
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="SunContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SunIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/SunContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_0rdsr")
expand_mode = 1
stretch_mode = 5

[node name="SunLabel" type="Label" parent="MarginContainer/HBoxContainer/SunContainer"]
layout_mode = 2
text = "100"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Upgrades"

[connection signal="pressed" from="MarginContainer/HBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
